sdk/containerservice/arm-containerservice/samples/v25/typescript/README.md
# @azure/arm-containerservice client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-containerservice in some common scenarios.

| **File Name**                                                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsAbortLatestOperationSample.ts][agentpoolsabortlatestoperationsample]                                                   | aborts the currently running operation on the agent pool. The Agent Pool will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: 2026-04-02-preview/AgentPoolsAbortOperation.json                                                                                                            |
| [agentPoolsCompleteUpgradeSample.ts][agentpoolscompleteupgradesample]                                                             | completes the upgrade operation for the specified agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsCompleteUpgrade.json                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsCreateOrUpdateSample.ts][agentpoolscreateorupdatesample]                                                               | creates or updates an agent pool in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsAssociate_CRG.json                                                                                                                                                                                                                                                                                                                  |
| [agentPoolsDeleteMachinesSample.ts][agentpoolsdeletemachinessample]                                                               | deletes specific machines in an agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsDeleteMachines.json                                                                                                                                                                                                                                                                                                                                        |
| [agentPoolsDeleteSample.ts][agentpoolsdeletesample]                                                                               | deletes an agent pool in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsDelete.json                                                                                                                                                                                                                                                                                                                                    |
| [agentPoolsGetAvailableAgentPoolVersionsSample.ts][agentpoolsgetavailableagentpoolversionssample]                                 | see [supported Kubernetes versions](https://docs.microsoft.com/azure/aks/supported-kubernetes-versions) for more details about the version lifecycle. x-ms-original-file: 2026-04-02-preview/AgentPoolsGetAgentPoolAvailableVersions.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.ts][agentpoolsgetsample]                                                                                     | gets the specified managed cluster agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [agentPoolsGetUpgradeProfileSample.ts][agentpoolsgetupgradeprofilesample]                                                         | gets the upgrade profile for an agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsListSample.ts][agentpoolslistsample]                                                                                   | gets a list of agent pools in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsList.json                                                                                                                                                                                                                                                                                                                                 |
| [agentPoolsUpgradeNodeImageVersionSample.ts][agentpoolsupgradenodeimageversionsample]                                             | upgrading the node image version of an agent pool applies the newest OS and runtime updates to the nodes. AKS provides one new image per week with the latest updates. For more details on node image versions, see: https://docs.microsoft.com/azure/aks/node-image-upgrade x-ms-original-file: 2026-04-02-preview/AgentPoolsUpgradeNodeImageVersion.json                                                                                              |
| [containerServiceListNodeImageVersionsSample.ts][containerservicelistnodeimageversionssample]                                     | only returns the latest version of each node image. For example there may be an AKSUbuntu-1804gen2containerd-2024.01.26, but only AKSUbuntu-1804gen2containerd-2024.02.02 is visible in this list. x-ms-original-file: 2026-04-02-preview/NodeImageVersions_List.json                                                                                                                                                                                   |
| [identityBindingsCreateOrUpdateSample.ts][identitybindingscreateorupdatesample]                                                   | creates or updates an identity binding in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Create_Or_Update.json                                                                                                                                                                                                                                                                                                  |
| [identityBindingsDeleteSample.ts][identitybindingsdeletesample]                                                                   | deletes an identity binding in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Delete.json                                                                                                                                                                                                                                                                                                                       |
| [identityBindingsGetSample.ts][identitybindingsgetsample]                                                                         | gets the specified Identity Binding. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [identityBindingsListByManagedClusterSample.ts][identitybindingslistbymanagedclustersample]                                       | gets a list of identity bindings in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_List.json                                                                                                                                                                                                                                                                                                                    |
| [jwtAuthenticatorsCreateOrUpdateSample.ts][jwtauthenticatorscreateorupdatesample]                                                 | creates or updates JWT authenticator in the managed cluster and updates the managed cluster to apply the settings. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Create_Or_Update.json                                                                                                                                                                                                                                                       |
| [jwtAuthenticatorsDeleteSample.ts][jwtauthenticatorsdeletesample]                                                                 | deletes a JWT authenticator and updates the managed cluster to apply the settings. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Delete.json                                                                                                                                                                                                                                                                                                 |
| [jwtAuthenticatorsGetSample.ts][jwtauthenticatorsgetsample]                                                                       | gets the specified JWT authenticator of a managed cluster. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Get.json                                                                                                                                                                                                                                                                                                                            |
| [jwtAuthenticatorsListByManagedClusterSample.ts][jwtauthenticatorslistbymanagedclustersample]                                     | gets a list of JWT authenticators in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_List.json                                                                                                                                                                                                                                                                                                                  |
| [loadBalancersCreateOrUpdateSample.ts][loadbalancerscreateorupdatesample]                                                         | creates or updates a load balancer in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Create_Or_Update.json                                                                                                                                                                                                                                                                                                         |
| [loadBalancersDeleteSample.ts][loadbalancersdeletesample]                                                                         | deletes a load balancer in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Delete.json                                                                                                                                                                                                                                                                                                                              |
| [loadBalancersGetSample.ts][loadbalancersgetsample]                                                                               | gets the specified load balancer. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Get.json                                                                                                                                                                                                                                                                                                                                                         |
| [loadBalancersListByManagedClusterSample.ts][loadbalancerslistbymanagedclustersample]                                             | gets a list of load balancers in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_List.json                                                                                                                                                                                                                                                                                                                          |
| [machinesCreateOrUpdateSample.ts][machinescreateorupdatesample]                                                                   | creates or updates a machine in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineCreate_Update.json                                                                                                                                                                                                                                                                                                                              |
| [machinesGetSample.ts][machinesgetsample]                                                                                         | get a specific machine in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineGet.json                                                                                                                                                                                                                                                                                                                                              |
| [machinesListSample.ts][machineslistsample]                                                                                       | gets a list of machines in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineList.json                                                                                                                                                                                                                                                                                                                                            |
| [maintenanceConfigurationsCreateOrUpdateSample.ts][maintenanceconfigurationscreateorupdatesample]                                 | creates or updates a maintenance configuration in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsCreate_Update_MaintenanceWindow.json                                                                                                                                                                                                                                                                   |
| [maintenanceConfigurationsDeleteSample.ts][maintenanceconfigurationsdeletesample]                                                 | deletes a maintenance configuration. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsDelete_MaintenanceWindow.json                                                                                                                                                                                                                                                                                                                      |
| [maintenanceConfigurationsGetSample.ts][maintenanceconfigurationsgetsample]                                                       | gets the specified maintenance configuration of a managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsGet_MaintenanceWindow.json                                                                                                                                                                                                                                                                                           |
| [maintenanceConfigurationsListByManagedClusterSample.ts][maintenanceconfigurationslistbymanagedclustersample]                     | gets a list of maintenance configurations in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsList_MaintenanceWindow.json                                                                                                                                                                                                                                                                                 |
| [maintenanceWindowsCreateOrUpdateSample.ts][maintenancewindowscreateorupdatesample]                                               | creates or updates a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                   |
| [maintenanceWindowsDeleteSample.ts][maintenancewindowsdeletesample]                                                               | deletes a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsDelete.json                                                                                                                                                                                                                                                                                                                                                      |
| [maintenanceWindowsGetSample.ts][maintenancewindowsgetsample]                                                                     | gets the specified maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [maintenanceWindowsListBySubscriptionSample.ts][maintenancewindowslistbysubscriptionsample]                                       | lists maintenance windows in the specified subscription. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsListBySubscription.json                                                                                                                                                                                                                                                                                                               |
| [maintenanceWindowsListSample.ts][maintenancewindowslistsample]                                                                   | lists maintenance windows in the specified resource group. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsList.json                                                                                                                                                                                                                                                                                                                           |
| [maintenanceWindowsUpdateTagsSample.ts][maintenancewindowsupdatetagssample]                                                       | updates tags on a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsUpdateTags.json                                                                                                                                                                                                                                                                                                                                          |
| [managedClusterSnapshotsCreateOrUpdateSample.ts][managedclustersnapshotscreateorupdatesample]                                     | creates or updates a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                |
| [managedClusterSnapshotsDeleteSample.ts][managedclustersnapshotsdeletesample]                                                     | deletes a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                           |
| [managedClusterSnapshotsGetSample.ts][managedclustersnapshotsgetsample]                                                           | gets a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                 |
| [managedClusterSnapshotsListByResourceGroupSample.ts][managedclustersnapshotslistbyresourcegroupsample]                           | lists managed cluster snapshots in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                |
| [managedClusterSnapshotsListSample.ts][managedclustersnapshotslistsample]                                                         | gets a list of managed cluster snapshots in the specified subscription. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsList.json                                                                                                                                                                                                                                                                                                         |
| [managedClusterSnapshotsUpdateTagsSample.ts][managedclustersnapshotsupdatetagssample]                                             | updates tags on a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                               |
| [managedClustersAbortLatestOperationSample.ts][managedclustersabortlatestoperationsample]                                         | aborts the currently running operation on the managed cluster. The Managed Cluster will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: 2026-04-02-preview/ManagedClustersAbortOperation.json                                                                                             |
| [managedClustersCreateOrUpdateSample.ts][managedclusterscreateorupdatesample]                                                     | creates or updates a managed cluster. x-ms-original-file: 2026-04-02-preview/AdvancedNetworkingTransitEncryption.json                                                                                                                                                                                                                                                                                                                                   |
| [managedClustersDeleteSample.ts][managedclustersdeletesample]                                                                     | deletes a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedClustersGetAccessProfileSample.ts][managedclustersgetaccessprofilesample]                                                 | **WARNING**: This API will be deprecated. Instead use [ListClusterUserCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusterusercredentials) or [ListClusterAdminCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusteradmincredentials) . x-ms-original-file: 2026-04-02-preview/ManagedClustersGetAccessProfile.json                                                                              |
| [managedClustersGetCommandResultSample.ts][managedclustersgetcommandresultsample]                                                 | gets the results of a command which has been run on the Managed Cluster. x-ms-original-file: 2026-04-02-preview/RunCommandResultFailed.json                                                                                                                                                                                                                                                                                                             |
| [managedClustersGetGuardrailsVersionsSample.ts][managedclustersgetguardrailsversionssample]                                       | contains Guardrails version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/GetGuardrailsVersions.json                                                                                                                                                                                                                                                                                          |
| [managedClustersGetMeshRevisionProfileSample.ts][managedclustersgetmeshrevisionprofilesample]                                     | contains extra metadata on the revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: 2026-04-02-preview/ManagedClustersGet_MeshRevisionProfile.json                                                                                                                                                                                                                                                 |
| [managedClustersGetMeshUpgradeProfileSample.ts][managedclustersgetmeshupgradeprofilesample]                                       | gets available upgrades for a service mesh in a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGet_MeshUpgradeProfile.json                                                                                                                                                                                                                                                                                                              |
| [managedClustersGetSafeguardsVersionsSample.ts][managedclustersgetsafeguardsversionssample]                                       | contains Safeguards version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/GetSafeguardsVersions.json                                                                                                                                                                                                                                                                                          |
| [managedClustersGetSample.ts][managedclustersgetsample]                                                                           | gets a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGet.json                                                                                                                                                                                                                                                                                                                                                                  |
| [managedClustersGetUpgradeProfileSample.ts][managedclustersgetupgradeprofilesample]                                               | gets the upgrade profile of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                             |
| [managedClustersListByResourceGroupSample.ts][managedclusterslistbyresourcegroupsample]                                           | lists managed clusters in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/ManagedClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                 |
| [managedClustersListClusterAdminCredentialsSample.ts][managedclusterslistclusteradmincredentialssample]                           | lists the admin credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterAdminCredentials.json                                                                                                                                                                                                                                                                                                                |
| [managedClustersListClusterMonitoringUserCredentialsSample.ts][managedclusterslistclustermonitoringusercredentialssample]         | lists the cluster monitoring user credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterCredentialResult.json                                                                                                                                                                                                                                                                                              |
| [managedClustersListClusterUserCredentialsSample.ts][managedclusterslistclusterusercredentialssample]                             | lists the user credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterUserCredentials.json                                                                                                                                                                                                                                                                                                                  |
| [managedClustersListGuardrailsVersionsSample.ts][managedclusterslistguardrailsversionssample]                                     | contains list of Guardrails version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/ListGuardrailsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersListKubernetesVersionsSample.ts][managedclusterslistkubernetesversionssample]                                     | contains extra metadata on the version, including supported patch versions, capabilities, available upgrades, and details on preview status of the version x-ms-original-file: 2026-04-02-preview/KubernetesVersions_List.json                                                                                                                                                                                                                          |
| [managedClustersListMeshRevisionProfilesSample.ts][managedclusterslistmeshrevisionprofilessample]                                 | contains extra metadata on each revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: 2026-04-02-preview/ManagedClustersList_MeshRevisionProfiles.json                                                                                                                                                                                                                                              |
| [managedClustersListMeshUpgradeProfilesSample.ts][managedclusterslistmeshupgradeprofilessample]                                   | lists available upgrades for all service meshes in a specific cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersList_MeshUpgradeProfiles.json                                                                                                                                                                                                                                                                                              |
| [managedClustersListOutboundNetworkDependenciesEndpointsSample.ts][managedclusterslistoutboundnetworkdependenciesendpointssample] | gets a list of egress endpoints (network endpoints of all outbound dependencies) in the specified managed cluster. The operation returns properties of each egress endpoint. x-ms-original-file: 2026-04-02-preview/OutboundNetworkDependenciesEndpointsList.json                                                                                                                                                                                       |
| [managedClustersListSafeguardsVersionsSample.ts][managedclusterslistsafeguardsversionssample]                                     | contains list of Safeguards version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/ListSafeguardsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersListSample.ts][managedclusterslistsample]                                                                         | gets a list of managed clusters in the specified subscription. x-ms-original-file: 2026-04-02-preview/ManagedClustersList.json                                                                                                                                                                                                                                                                                                                          |
| [managedClustersRebalanceLoadBalancersSample.ts][managedclustersrebalanceloadbalancerssample]                                     | rebalance nodes across specific load balancers. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Rebalance.json                                                                                                                                                                                                                                                                                                                                     |
| [managedClustersResetAADProfileSample.ts][managedclustersresetaadprofilesample]                                                   | **WARNING**: This API will be deprecated. Please see [AKS-managed Azure Active Directory integration](https://aka.ms/aks-managed-aad) to update your cluster with AKS-managed Azure AD. x-ms-original-file: 2026-04-02-preview/ManagedClustersResetAADProfile.json                                                                                                                                                                                      |
| [managedClustersResetServicePrincipalProfileSample.ts][managedclustersresetserviceprincipalprofilesample]                         | this action cannot be performed on a cluster that is not using a service principal x-ms-original-file: 2026-04-02-preview/ManagedClustersResetServicePrincipalProfile.json                                                                                                                                                                                                                                                                              |
| [managedClustersRotateClusterCertificatesSample.ts][managedclustersrotateclustercertificatessample]                               | see [Certificate rotation](https://docs.microsoft.com/azure/aks/certificate-rotation) for more details about rotating managed cluster certificates. x-ms-original-file: 2026-04-02-preview/ManagedClustersRotateClusterCertificates.json                                                                                                                                                                                                                |
| [managedClustersRotateServiceAccountSigningKeysSample.ts][managedclustersrotateserviceaccountsigningkeyssample]                   | rotates the service account signing keys of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersRotateServiceAccountSigningKeys.json                                                                                                                                                                                                                                                                                               |
| [managedClustersRunCommandSample.ts][managedclustersruncommandsample]                                                             | aKS will create a pod to run the command. This is primarily useful for private clusters. For more information see [AKS Run Command](https://docs.microsoft.com/azure/aks/private-clusters#aks-run-command-preview). x-ms-original-file: 2026-04-02-preview/RunCommandRequest.json                                                                                                                                                                       |
| [managedClustersStartSample.ts][managedclustersstartsample]                                                                       | see [starting a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about starting a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersStart.json                                                                                                                                                                                                                                                           |
| [managedClustersStopSample.ts][managedclustersstopsample]                                                                         | this can only be performed on Azure Virtual Machine Scale set backed clusters. Stopping a cluster stops the control plane and agent nodes entirely, while maintaining all object and cluster state. A cluster does not accrue charges while it is stopped. See [stopping a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about stopping a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersStop.json |
| [managedClustersUpdateTagsSample.ts][managedclustersupdatetagssample]                                                             | updates tags on a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersUpdateTags.json                                                                                                                                                                                                                                                                                                                                                |
| [managedNamespacesCreateOrUpdateSample.ts][managednamespacescreateorupdatesample]                                                 | creates or updates a namespace managed by ARM for the specified managed cluster. Users can configure aspects like resource quotas, network ingress/egress policies, and more. See aka.ms/aks/managed-namespaces for more details. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesCreate_Update.json                                                                                                                                            |
| [managedNamespacesDeleteSample.ts][managednamespacesdeletesample]                                                                 | deletes a namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesDelete.json                                                                                                                                                                                                                                                                                                                                                                |
| [managedNamespacesGetSample.ts][managednamespacesgetsample]                                                                       | gets the specified namespace of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesGet.json                                                                                                                                                                                                                                                                                                                                     |
| [managedNamespacesListByManagedClusterSample.ts][managednamespaceslistbymanagedclustersample]                                     | gets a list of managed namespaces in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesList.json                                                                                                                                                                                                                                                                                                                   |
| [managedNamespacesListCredentialSample.ts][managednamespaceslistcredentialsample]                                                 | lists the credentials of a namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesListCredentialResult.json                                                                                                                                                                                                                                                                                                                                 |
| [managedNamespacesUpdateSample.ts][managednamespacesupdatesample]                                                                 | updates tags on a managed namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesUpdateTags.json                                                                                                                                                                                                                                                                                                                                            |
| [meshMembershipsCreateOrUpdateSample.ts][meshmembershipscreateorupdatesample]                                                     | creates or updates the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                 |
| [meshMembershipsDeleteSample.ts][meshmembershipsdeletesample]                                                                     | deletes the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_Delete.json                                                                                                                                                                                                                                                                                                                                    |
| [meshMembershipsGetSample.ts][meshmembershipsgetsample]                                                                           | gets the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_Get.json                                                                                                                                                                                                                                                                                                                                          |
| [meshMembershipsListByManagedClusterSample.ts][meshmembershipslistbymanagedclustersample]                                         | lists mesh memberships in a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_ListByManagedCluster.json                                                                                                                                                                                                                                                                                                                           |
| [operationStatusResultGetByAgentPoolSample.ts][operationstatusresultgetbyagentpoolsample]                                         | get the status of a specific operation in the specified agent pool. x-ms-original-file: 2026-04-02-preview/OperationStatusResultGetByAgentPool.json                                                                                                                                                                                                                                                                                                     |
| [operationStatusResultGetSample.ts][operationstatusresultgetsample]                                                               | get the status of a specific operation in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/OperationStatusResultGet.json                                                                                                                                                                                                                                                                                                           |
| [operationStatusResultListSample.ts][operationstatusresultlistsample]                                                             | gets a list of operations in the specified managedCluster x-ms-original-file: 2026-04-02-preview/OperationStatusResultList.json                                                                                                                                                                                                                                                                                                                         |
| [operationsListSample.ts][operationslistsample]                                                                                   | gets a list of operations. x-ms-original-file: 2026-04-02-preview/Operation_List.json                                                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                               | deletes a private endpoint connection. x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsDelete.json                                                                                                                                                                                                                                                                                                                                     |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                                     | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsGet.json                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsListSample.ts][privateendpointconnectionslistsample]                                                   | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsUpdateSample.ts][privateendpointconnectionsupdatesample]                                               | updates a private endpoint connection. x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsUpdate.json                                                                                                                                                                                                                                                                                                                                     |
| [privateLinkResourcesListSample.ts][privatelinkresourceslistsample]                                                               | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                   |
| [resolvePrivateLinkServiceIdPostSample.ts][resolveprivatelinkserviceidpostsample]                                                 | gets the private link service ID for the specified managed cluster. x-ms-original-file: 2026-04-02-preview/ResolvePrivateLinkServiceId.json                                                                                                                                                                                                                                                                                                             |
| [snapshotsCreateOrUpdateSample.ts][snapshotscreateorupdatesample]                                                                 | creates or updates a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                                              |
| [snapshotsDeleteSample.ts][snapshotsdeletesample]                                                                                 | deletes a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                                                         |
| [snapshotsGetSample.ts][snapshotsgetsample]                                                                                       | gets a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsListByResourceGroupSample.ts][snapshotslistbyresourcegroupsample]                                                       | lists snapshots in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/SnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                                              |
| [snapshotsListSample.ts][snapshotslistsample]                                                                                     | gets a list of snapshots in the specified subscription. x-ms-original-file: 2026-04-02-preview/SnapshotsList.json                                                                                                                                                                                                                                                                                                                                       |
| [snapshotsUpdateTagsSample.ts][snapshotsupdatetagssample]                                                                         | updates tags on a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                                                             |
| [trustedAccessRoleBindingsCreateOrUpdateSample.ts][trustedaccessrolebindingscreateorupdatesample]                                 | create or update a trusted access role binding x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                     |
| [trustedAccessRoleBindingsDeleteSample.ts][trustedaccessrolebindingsdeletesample]                                                 | delete a trusted access role binding. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_Delete.json                                                                                                                                                                                                                                                                                                                                      |
| [trustedAccessRoleBindingsGetSample.ts][trustedaccessrolebindingsgetsample]                                                       | get a trusted access role binding. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_Get.json                                                                                                                                                                                                                                                                                                                                            |
| [trustedAccessRoleBindingsListSample.ts][trustedaccessrolebindingslistsample]                                                     | list trusted access role bindings. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_List.json                                                                                                                                                                                                                                                                                                                                           |
| [trustedAccessRolesListSample.ts][trustedaccessroleslistsample]                                                                   | list supported trusted access roles. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoles_List.json                                                                                                                                                                                                                                                                                                                                                |
| [vmSkusListSample.ts][vmskuslistsample]                                                                                           | gets the list of VM SKUs accepted by AKS when creating node pools in a specified location. AKS will perform a best effort approach to provision the requested VM SKUs, but availability is not guaranteed. x-ms-original-file: 2026-04-02-preview/ListAvailableContainerServiceVmSkus.json                                                                                                                                                              |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/agentPoolsAbortLatestOperationSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/agentPoolsAbortLatestOperationSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolsabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsAbortLatestOperationSample.ts
[agentpoolscompleteupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsCompleteUpgradeSample.ts
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsCreateOrUpdateSample.ts
[agentpoolsdeletemachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsDeleteMachinesSample.ts
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsDeleteSample.ts
[agentpoolsgetavailableagentpoolversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsGetAvailableAgentPoolVersionsSample.ts
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsGetSample.ts
[agentpoolsgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsGetUpgradeProfileSample.ts
[agentpoolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsListSample.ts
[agentpoolsupgradenodeimageversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/agentPoolsUpgradeNodeImageVersionSample.ts
[containerservicelistnodeimageversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/containerServiceListNodeImageVersionsSample.ts
[identitybindingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/identityBindingsCreateOrUpdateSample.ts
[identitybindingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/identityBindingsDeleteSample.ts
[identitybindingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/identityBindingsGetSample.ts
[identitybindingslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/identityBindingsListByManagedClusterSample.ts
[jwtauthenticatorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/jwtAuthenticatorsCreateOrUpdateSample.ts
[jwtauthenticatorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/jwtAuthenticatorsDeleteSample.ts
[jwtauthenticatorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/jwtAuthenticatorsGetSample.ts
[jwtauthenticatorslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/jwtAuthenticatorsListByManagedClusterSample.ts
[loadbalancerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/loadBalancersCreateOrUpdateSample.ts
[loadbalancersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/loadBalancersDeleteSample.ts
[loadbalancersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/loadBalancersGetSample.ts
[loadbalancerslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/loadBalancersListByManagedClusterSample.ts
[machinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/machinesCreateOrUpdateSample.ts
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/machinesGetSample.ts
[machineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/machinesListSample.ts
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceConfigurationsCreateOrUpdateSample.ts
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceConfigurationsDeleteSample.ts
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceConfigurationsGetSample.ts
[maintenanceconfigurationslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceConfigurationsListByManagedClusterSample.ts
[maintenancewindowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsCreateOrUpdateSample.ts
[maintenancewindowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsDeleteSample.ts
[maintenancewindowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsGetSample.ts
[maintenancewindowslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsListBySubscriptionSample.ts
[maintenancewindowslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsListSample.ts
[maintenancewindowsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/maintenanceWindowsUpdateTagsSample.ts
[managedclustersnapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsCreateOrUpdateSample.ts
[managedclustersnapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsDeleteSample.ts
[managedclustersnapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsGetSample.ts
[managedclustersnapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsListByResourceGroupSample.ts
[managedclustersnapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsListSample.ts
[managedclustersnapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClusterSnapshotsUpdateTagsSample.ts
[managedclustersabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersAbortLatestOperationSample.ts
[managedclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersCreateOrUpdateSample.ts
[managedclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersDeleteSample.ts
[managedclustersgetaccessprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetAccessProfileSample.ts
[managedclustersgetcommandresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetCommandResultSample.ts
[managedclustersgetguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetGuardrailsVersionsSample.ts
[managedclustersgetmeshrevisionprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetMeshRevisionProfileSample.ts
[managedclustersgetmeshupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetMeshUpgradeProfileSample.ts
[managedclustersgetsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetSafeguardsVersionsSample.ts
[managedclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetSample.ts
[managedclustersgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersGetUpgradeProfileSample.ts
[managedclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListByResourceGroupSample.ts
[managedclusterslistclusteradmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListClusterAdminCredentialsSample.ts
[managedclusterslistclustermonitoringusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListClusterMonitoringUserCredentialsSample.ts
[managedclusterslistclusterusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListClusterUserCredentialsSample.ts
[managedclusterslistguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListGuardrailsVersionsSample.ts
[managedclusterslistkubernetesversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListKubernetesVersionsSample.ts
[managedclusterslistmeshrevisionprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListMeshRevisionProfilesSample.ts
[managedclusterslistmeshupgradeprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListMeshUpgradeProfilesSample.ts
[managedclusterslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListOutboundNetworkDependenciesEndpointsSample.ts
[managedclusterslistsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListSafeguardsVersionsSample.ts
[managedclusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersListSample.ts
[managedclustersrebalanceloadbalancerssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersRebalanceLoadBalancersSample.ts
[managedclustersresetaadprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersResetAADProfileSample.ts
[managedclustersresetserviceprincipalprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersResetServicePrincipalProfileSample.ts
[managedclustersrotateclustercertificatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersRotateClusterCertificatesSample.ts
[managedclustersrotateserviceaccountsigningkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersRotateServiceAccountSigningKeysSample.ts
[managedclustersruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersRunCommandSample.ts
[managedclustersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersStartSample.ts
[managedclustersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersStopSample.ts
[managedclustersupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedClustersUpdateTagsSample.ts
[managednamespacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesCreateOrUpdateSample.ts
[managednamespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesDeleteSample.ts
[managednamespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesGetSample.ts
[managednamespaceslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesListByManagedClusterSample.ts
[managednamespaceslistcredentialsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesListCredentialSample.ts
[managednamespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/managedNamespacesUpdateSample.ts
[meshmembershipscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/meshMembershipsCreateOrUpdateSample.ts
[meshmembershipsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/meshMembershipsDeleteSample.ts
[meshmembershipsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/meshMembershipsGetSample.ts
[meshmembershipslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/meshMembershipsListByManagedClusterSample.ts
[operationstatusresultgetbyagentpoolsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/operationStatusResultGetByAgentPoolSample.ts
[operationstatusresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/operationStatusResultGetSample.ts
[operationstatusresultlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/operationStatusResultListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/operationsListSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/privateEndpointConnectionsListSample.ts
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/privateEndpointConnectionsUpdateSample.ts
[privatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/privateLinkResourcesListSample.ts
[resolveprivatelinkserviceidpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/resolvePrivateLinkServiceIdPostSample.ts
[snapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsCreateOrUpdateSample.ts
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsDeleteSample.ts
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsGetSample.ts
[snapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsListByResourceGroupSample.ts
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsListSample.ts
[snapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/snapshotsUpdateTagsSample.ts
[trustedaccessrolebindingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/trustedAccessRoleBindingsCreateOrUpdateSample.ts
[trustedaccessrolebindingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/trustedAccessRoleBindingsDeleteSample.ts
[trustedaccessrolebindingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/trustedAccessRoleBindingsGetSample.ts
[trustedaccessrolebindingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/trustedAccessRoleBindingsListSample.ts
[trustedaccessroleslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/trustedAccessRolesListSample.ts
[vmskuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/typescript/src/vmSkusListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-containerservice
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerservice/arm-containerservice/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
